# fastapi-globals

./: .coverage  README.md  justfile  pyproject.toml  tox.ini
.github/workflows/: lint.yml  release.yml  test.yml
fastapi_globals/: __init__.py  globals.py
src/fastapi_globals/: __init__.py
tests/: test_globals.py
