[project]
name = "fastapi-globals"
version = "0.10.1"
description = "Use request global variables in FastAPI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100,<1.0",
]

[dependency-groups]
dev = [
    "trio>=0.27.0",
    "httpx>=0.27.2",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "anyio>=4.6.2.post1",
    "pyright>=1.1.389",
    "ruff>=0.8.0",
    "tox>=4.23.2",
    "tomlkit>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "fastapi_globals",
]
