[project]
name = "fastapi-globals"
version = "0.1.2"
description = "Use request global variables in FastAPI"
readme = "README.md"
authors = [
    {name = "TEAM23 GmbH", email = "info@team23.de"},
]
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100,<1.0",
]

[project.urls]
Repository = "https://github.com/team23/fastapi-globals"

[dependency-groups]
dev = [
    "trio>=0.27.0",
    "httpx>=0.27.2",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "anyio>=4.6.2.post1",
    "pyright>=1.1.389",
    "ruff>=0.8.0",
    "tox>=4.23.2",
    "tomlkit>=0.13.2",
]

[tool.ruff]
line-length = 115
target-version = "py39"
output-format = "grouped"

[tool.ruff.lint]
select = ["F","E","W","C","I","N","UP","ANN","S","B","A","COM","C4","T20","PT","ARG","TD","RUF"]
ignore = ["A001","A002","A003","ANN401","C901","N8","B008","F405","F821"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"conftest.py" = ["S101","ANN","F401"]
"test_*.py" = ["S101","ANN","F401"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "fastapi_globals",
]
