[project]
name = "fastapi-globals"
version = "0.2.0"
description = "Use request global variables in FastAPI"
readme = "README.md"
authors = [{ name = "TEAM23 GmbH", email = "info@team23.de" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100,<1.0",
]

[project.urls]
Repository = "https://github.com/team23/fastapi-globals"

[dependency-groups]
dev = [
    "trio>=0.31.0",
    "httpx>=0.28.1",
    "pytest-cov>=7.0.0",
    "pytest>=8.4.2",
    "anyio>=4.11.0",
    "pyright>=1.1.406",
    "ruff>=0.13.3",
    "tox>=4.30.3",
    "tomlkit>=0.13.3",
]

[tool.pytest.ini_options]
markers = [
    "unit: mark a test as a unit test",
]

[tool.ruff]
line-length = 115
target-version = "py310"
output-format = "grouped"

[tool.ruff.lint]
select = ["F","E","W","C","I","N","UP","ANN","S","B","A","COM","C4","T20","PT","ARG","TD","RUF"]
ignore = ["A001","A002","A003","ANN401","C901","N8","B008","F405","F821"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"conftest.py" = ["S101","ANN","F401"]
"test_*.py" = ["S101","ANN","F401"]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "fastapi_globals"
module-root = ""
